SUBDIRS = unit-testing
if HAVE_PYTHON_LIBXML2
if HAVE_LIBXML2
SUBDIRS += xmlsuite
endif
endif
DIST_SUBDIRS = $(SUBDIRS)

TESTDATA = \
    test-data/2000/Arc.dwg \
    test-data/2000/Arc.jpg \
    test-data/2000/Arc.txt \
    test-data/2000/Constraints.dwg \
    test-data/2000/Constraints.dxf \
    test-data/2000/Cone.dwg \
    test-data/2000/ConstructionLine.dwg \
    test-data/2000/ConstructionLine.jpg \
    test-data/2000/ConstructionLine.txt \
    test-data/2000/Donut.dwg \
    test-data/2000/Donut.jpg \
    test-data/2000/Donut.txt \
    test-data/2000/Ellipse.dwg \
    test-data/2000/Ellipse.jpg \
    test-data/2000/Ellipse.txt \
    test-data/2000/Helix.dwg \
    test-data/2000/Helix.jpg \
    test-data/2000/Helix.txt \
    test-data/2000/Leader.dwg \
    test-data/2000/Leader.dxf \
    test-data/2000/Line.dwg \
    test-data/2000/Line.jpg \
    test-data/2000/Line.txt \
    test-data/2000/Multiline.dwg \
    test-data/2000/Multiline.jpg \
    test-data/2000/Multiline.txt \
    test-data/2000/Point.dwg \
    test-data/2000/Point.jpg \
    test-data/2000/Point.txt \
    test-data/2000/PolyLine2D.dwg \
    test-data/2000/PolyLine2D.dxf \
    test-data/2000/PolyLine3D.dwg \
    test-data/2000/PolyLine3D.jpg \
    test-data/2000/PolyLine3D.txt \
    test-data/2000/Polygon.dwg \
    test-data/2000/Polygon.jpg \
    test-data/2000/Polygon.txt \
    test-data/2000/Polyline.dwg \
    test-data/2000/Polyline.jpg \
    test-data/2000/Polyline.txt \
    test-data/2000/RAY.dwg \
    test-data/2000/RAY.jpg \
    test-data/2000/RAY.txt \
    test-data/2000/Spline.dwg \
    test-data/2000/Spline.jpg \
    test-data/2000/Spline.txt \
    test-data/2000/Text.dwg \
    test-data/2000/Text.jpg \
    test-data/2000/Text.txt \
    test-data/2000/TS1.dwg \
    test-data/2000/TS1.dwg.info \
    test-data/2000/TS1.dxf \
    test-data/2000/TS1.txt \
    test-data/2000/circle.dwg \
    test-data/2000/circle.jpg \
    test-data/2000/circle.txt \
    test-data/2004/Arc.dwg \
    test-data/2004/Arc.jpg \
    test-data/2004/Arc.txt \
    test-data/2004/Constraints.dwg \
    test-data/2004/Constraints.dxf \
    test-data/2004/ConstructionLine.dwg \
    test-data/2004/ConstructionLine.jpg \
    test-data/2004/ConstructionLine.txt \
    test-data/2004/Donut.dwg \
    test-data/2004/Donut.jpg \
    test-data/2004/Donut.txt \
    test-data/2004/Ellipse.dwg \
    test-data/2004/Ellipse.jpg \
    test-data/2004/Ellipse.txt \
    test-data/2004/HatchG.dwg \
    test-data/2004/Helix.dwg \
    test-data/2004/Helix.jpg \
    test-data/2004/Helix.txt \
    test-data/2004/Leader.dwg \
    test-data/2004/Leader.dxf \
    test-data/2004/Line.dwg \
    test-data/2004/Line.jpg \
    test-data/2004/Line.txt \
    test-data/2004/Multiline.dwg \
    test-data/2004/Multiline.jpg \
    test-data/2004/Multiline.txt \
    test-data/2004/Point.dwg \
    test-data/2004/Point.jpg \
    test-data/2004/Point.txt \
    test-data/2004/PolyLine3D.dwg \
    test-data/2004/PolyLine3D.jpg \
    test-data/2004/PolyLine3D.txt \
    test-data/2004/Polygon.dwg \
    test-data/2004/Polygon.jpg \
    test-data/2004/Polygon.txt \
    test-data/2004/Polyline.dwg \
    test-data/2004/Polyline.jpg \
    test-data/2004/Polyline.txt \
    test-data/2004/RAY.dwg \
    test-data/2004/RAY.jpg \
    test-data/2004/RAY.txt \
    test-data/2004/Spline.dwg \
    test-data/2004/Spline.jpg \
    test-data/2004/Spline.txt \
    test-data/2004/Surface.dwg \
    test-data/2004/Surface.dxf \
    test-data/2004/Text.dwg \
    test-data/2004/Text.jpg \
    test-data/2004/Text.txt \
    test-data/2004/Underlay.dwg \
    test-data/2004/Underlay.dxf \
    test-data/2004/circle.dwg \
    test-data/2004/circle.jpg \
    test-data/2004/circle.txt \
    test-data/2004/material.dwg \
    test-data/2004/material.dxf \
    test-data/2007/ATMOS-DC22S.dwg \
    test-data/2007/Arc.dwg \
    test-data/2007/Arc.jpg \
    test-data/2007/Arc.txt \
    test-data/2007/Constraints.dwg \
    test-data/2007/Constraints.dxf \
    test-data/2007/ConstructionLine.dwg \
    test-data/2007/ConstructionLine.jpg \
    test-data/2007/ConstructionLine.txt \
    test-data/2007/Donut.dwg \
    test-data/2007/Donut.jpg \
    test-data/2007/Donut.txt \
    test-data/2007/Ellipse.dwg \
    test-data/2007/Ellipse.jpg \
    test-data/2007/Ellipse.txt \
    test-data/2007/Helix.dwg \
    test-data/2007/Helix.jpg \
    test-data/2007/Helix.txt \
    test-data/2007/Leader.dwg \
    test-data/2007/Leader.dxf \
    test-data/2007/Line.dwg \
    test-data/2007/Line.jpg \
    test-data/2007/Line.txt \
    test-data/2007/Multiline.dwg \
    test-data/2007/Multiline.jpg \
    test-data/2007/Multiline.txt \
    test-data/2007/Point.dwg \
    test-data/2007/Point.jpg \
    test-data/2007/Point.txt \
    test-data/2007/PolyLine3D.dwg \
    test-data/2007/PolyLine3D.jpg \
    test-data/2007/PolyLine3D.txt \
    test-data/2007/Polygon.dwg \
    test-data/2007/Polygon.jpg \
    test-data/2007/Polygon.txt \
    test-data/2007/Polyline.dwg \
    test-data/2007/Polyline.jpg \
    test-data/2007/Polyline.txt \
    test-data/2007/RAY.dwg \
    test-data/2007/RAY.jpg \
    test-data/2007/RAY.txt \
    test-data/2007/Spline.dwg \
    test-data/2007/Spline.jpg \
    test-data/2007/Spline.txt \
    test-data/2007/Text.dwg \
    test-data/2007/Text.jpg \
    test-data/2007/Text.txt \
    test-data/2007/circle.dwg \
    test-data/2007/circle.jpg \
    test-data/2007/circle.txt \
    test-data/2010/Arc.dwg \
    test-data/2010/Arc.jpg \
    test-data/2010/Arc.txt \
    test-data/2010/Constraints.dwg \
    test-data/2010/Constraints.dxf \
    test-data/2010/ConstructionLine.dwg \
    test-data/2010/ConstructionLine.jpg \
    test-data/2010/ConstructionLine.txt \
    test-data/2010/Donut.dwg \
    test-data/2010/Donut.jpg \
    test-data/2010/Donut.txt \
    test-data/2010/Ellipse.dwg \
    test-data/2010/Ellipse.jpg \
    test-data/2010/Ellipse.txt \
    test-data/2010/Helix.dwg \
    test-data/2010/Helix.jpg \
    test-data/2010/Helix.txt \
    test-data/2010/Leader.dwg \
    test-data/2010/Leader.dxf \
    test-data/2010/Line.dwg \
    test-data/2010/Line.jpg \
    test-data/2010/Line.txt \
    test-data/2010/Multiline.dwg \
    test-data/2010/Multiline.jpg \
    test-data/2010/Multiline.txt \
    test-data/2010/Point.dwg \
    test-data/2010/Point.jpg \
    test-data/2010/Point.txt \
    test-data/2010/PolyLine3D.dwg \
    test-data/2010/PolyLine3D.jpg \
    test-data/2010/PolyLine3D.txt \
    test-data/2010/Polygon.dwg \
    test-data/2010/Polygon.jpg \
    test-data/2010/Polygon.txt \
    test-data/2010/Polyline.dwg \
    test-data/2010/Polyline.jpg \
    test-data/2010/Polyline.txt \
    test-data/2010/RAY.dwg \
    test-data/2010/RAY.jpg \
    test-data/2010/RAY.txt \
    test-data/2010/Spline.dwg \
    test-data/2010/Spline.jpg \
    test-data/2010/Spline.txt \
    test-data/2010/Text.dwg \
    test-data/2010/Text.jpg \
    test-data/2010/Text.txt \
    test-data/2010/circle.dwg \
    test-data/2010/circle.jpg \
    test-data/2010/circle.txt \
    test-data/2010/gh209_1.dwg \
    test-data/2010/gh209_1.dxf \
    test-data/2013/Arc.dwg \
    test-data/2013/Arc.jpg \
    test-data/2013/Arc.txt \
    test-data/2013/Constraints.dwg \
    test-data/2013/Constraints.dxf \
    test-data/2013/ConstructionLine.dwg \
    test-data/2013/ConstructionLine.jpg \
    test-data/2013/ConstructionLine.txt \
    test-data/2013/Donut.dwg \
    test-data/2013/Donut.jpg \
    test-data/2013/Donut.txt \
    test-data/2013/Ellipse.dwg \
    test-data/2013/Ellipse.jpg \
    test-data/2013/Ellipse.txt \
    test-data/2013/Helix.dwg \
    test-data/2013/Helix.jpg \
    test-data/2013/Helix.txt \
    test-data/2013/Leader.dwg \
    test-data/2013/Leader.dxf \
    test-data/2013/Line.dwg \
    test-data/2013/Line.jpg \
    test-data/2013/Line.txt \
    test-data/2013/Multiline.dwg \
    test-data/2013/Multiline.jpg \
    test-data/2013/Multiline.txt \
    test-data/2013/Point.dwg \
    test-data/2013/Point.jpg \
    test-data/2013/Point.txt \
    test-data/2013/PolyLine3D.dwg \
    test-data/2013/PolyLine3D.jpg \
    test-data/2013/PolyLine3D.txt \
    test-data/2013/Polygon.dwg \
    test-data/2013/Polygon.jpg \
    test-data/2013/Polygon.txt \
    test-data/2013/Polyline.dwg \
    test-data/2013/Polyline.jpg \
    test-data/2013/Polyline.txt \
    test-data/2013/RAY.dwg \
    test-data/2013/RAY.jpg \
    test-data/2013/RAY.txt \
    test-data/2013/Spline.dwg \
    test-data/2013/Spline.jpg \
    test-data/2013/Spline.txt \
    test-data/2013/Text.dwg \
    test-data/2013/Text.jpg \
    test-data/2013/Text.txt \
    test-data/2013/circle.dwg \
    test-data/2013/circle.jpg \
    test-data/2013/circle.txt \
    test-data/2013/gh44-error.dwg \
    test-data/2013/gh109_1.dwg \
    test-data/2013/gh109_1.dxf \
    test-data/2018/Arc.dwg \
    test-data/2018/Arc.txt \
    test-data/2018/Constraints.dwg \
    test-data/2018/Constraints.dxf \
    test-data/2018/ConstructionLine.dwg \
    test-data/2018/ConstructionLine.txt \
    test-data/2018/Donut.dwg \
    test-data/2018/Donut.txt \
    test-data/2018/Dynblocks.dwg \
    test-data/2018/Dynblocks.dxf \
    test-data/2018/Ellipse.dwg \
    test-data/2018/Ellipse.txt \
    test-data/2018/Helix.dwg \
    test-data/2018/Helix.txt \
    test-data/2018/Leader.dwg \
    test-data/2018/Leader.dxf \
    test-data/2018/Line.dwg \
    test-data/2018/Line.txt \
    test-data/2018/LiveSection1.dwg \
    test-data/2018/LiveSection1.dxf \
    test-data/2018/Multiline.dwg \
    test-data/2018/Multiline.txt \
    test-data/2018/Point.dwg \
    test-data/2018/Point.txt \
    test-data/2018/PolyLine3D.dwg \
    test-data/2018/PolyLine3D.txt \
    test-data/2018/Polygon.dwg \
    test-data/2018/Polygon.txt \
    test-data/2018/Polyline.dwg \
    test-data/2018/Polyline.txt \
    test-data/2018/RAY.dwg \
    test-data/2018/RAY.txt \
    test-data/2018/Spline.dwg \
    test-data/2018/Spline.txt \
    test-data/2018/Text.dwg \
    test-data/2018/Text.txt \
    test-data/2018/TS1.dxf \
    test-data/2018/circle.dwg \
    test-data/2018/circle.txt \
    test-data/example_2000.dwg \
    test-data/example_2000.dxf \
    test-data/example_2000.dxfb \
    test-data/example_2004.dwg \
    test-data/example_2004.dxf \
    test-data/example_2007.dwg \
    test-data/example_2007.dxf \
    test-data/example_2010.dwg \
    test-data/example_2010.dxf \
    test-data/example_2013.dwg \
    test-data/example_2013.dxf \
    test-data/example_2018.dwg \
    test-data/example_2018.dxf \
    test-data/example_2018.dxfb \
    test-data/example_r12.dxf \
    test-data/example_r13.dwg \
    test-data/example_r13.dxf \
    test-data/example_r14.dwg \
    test-data/example_r14.dxf \
    test-data/r1.4/entities.dwg \
    test-data/r1.4/entities.dxf \
    test-data/r10/entities.dwg \
    test-data/r10/entities.dxf \
    test-data/r10/entities.scr \
    test-data/r10/tmp_line.scr \
    test-data/r10/tmp_line.dwg \
    test-data/r10/tmp_line.dxf \
    test-data/r11/ACEB10.dwg \
    test-data/r11/ACEB10.stp \
    test-data/r11/Constraints_12.dxf \
    test-data/r11/entities-2d.dwg \
    test-data/r11/entities-2d.dxf \
    test-data/r11/entities-2d.scr \
    test-data/r11/entities-3d.dwg \
    test-data/r11/entities-3d.dxf \
    test-data/r11/entities-3d.scr \
    test-data/r12/Constraints.dxf \
    test-data/r12/Leader.dxf \
    test-data/r13/v.dxf \
    test-data/r14/Constraints.dwg \
    test-data/r14/Leader.dwg \
    test-data/r14/Leader.dxf \
    test-data/r14/v.dwg \
    test-data/r2.6/dim.dwg \
    test-data/r2.6/dim.dxf \
    test-data/r2.6/dim.scr \
    test-data/r2.6/entities.dwg \
    test-data/r2.6/entities.dxf \
    test-data/r2.6/entities.scr \
    test-data/r2.10/block.dwg \
    test-data/r2.10/block.dxf \
    test-data/r2.10/block.scr \
    test-data/r2.10/entities.dwg \
    test-data/r2.10/entities.dxf \
    test-data/r2.10/entities.scr \
    test-data/r9/entities.dwg \
    test-data/r9/entities.dxf \
    test-data/r9/entities.scr \
    test-data/sample_2000.dwg \
    test-data/sample_2000.dxf \
    test-data/sample_2004.dxf \
    test-data/sample_2007.dxf \
    test-data/sample_2010.dxf \
    test-data/sample_2013.dxf \
    test-data/sample_2018.dwg \
    test-data/sample_2018.dxf \
    test-data/sample_r14.dxf

EXTRA_DIST = $(TESTDATA)

if ENABLE_GCOV
gcov:
	for d in $(SUBDIRS); do $(MAKE) -C $$d gcov; done
endif

CLEANFILES = *.log *.sum site.bak
